# AutoClicker

./: Cargo.toml  README.md
src/: actions.rs  errors.rs  file_io.rs  main.rs
