[package]
name = "auto_clicker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.26.2"
egui_extras = { version = "0.26.2", features = ["all_loaders"] }
enigo = { version = "0.1.3", features = ["with_serde"] }
global-hotkey = "0.4.2"
serde = "1.0.196"
