[package]
name = "auto_clicker"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.26.2"
egui_extras = { version = "0.26.2", features = ["all_loaders"] }
enigo = { version = "0.6.1", features = ["serde"] }
global-hotkey = "0.4.2"
rfd = "0.14.0"
serde = "1.0.196"
serde_json = "1.0.114"
thiserror = "2.0.17"
